<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.tencent.qcloud.xiaozhibo.common.widget.TCActivityTitle
        android:id="@+id/at_eui_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:titleText="@string/userinfo_title"
        app:backText="@string/btn_return"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line"
        />

    <RelativeLayout
        android:id="@+id/rl_eui_head"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="65dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"
            />

        <TextView
            android:text="@string/userinfo_head"
            android:textColor="@color/colorTextBlack"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/iv_eui_head"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:layout_width="45dp"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <com.tencent.qcloud.xiaozhibo.userinfo.TCLineEditTextView
        android:id="@+id/letv_eui_nickname"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:name="@string/userinfo_nickname"
        app:isBottom="false"
        app:canNav="false"/>
    <com.tencent.qcloud.xiaozhibo.common.widget.TCLineControllerView
        android:id="@+id/lcv_eui_sex"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:name="@string/userinfo_sex"
        app:isBottom="true"
        app:canNav="true"/>
</LinearLayout>
