<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_register_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="com.tencent.qcloud.xiaozhibo.login.TCRegisterActivity">

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/btn_back_gray"
        android:drawableStart="@drawable/btn_back_gray"
        android:drawablePadding="5dp"
        android:textSize="18sp"
        android:text="@string/activity_register_return"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/colorTransparentGray" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_register"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/tv_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/et_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/activity_register_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_below="@+id/til_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:textColor="@color/white"
            android:hint="@string/activity_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/register"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_verify"
        android:layout_below="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/activity_register_password_verify"
            android:imeActionId="@+id/register"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>


    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@+id/til_password_verify"
        android:layout_marginTop="10dp"
        android:text="@string/activity_register_register"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        android:background="@drawable/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/btn_register" />

    <TextView
        android:id="@+id/tv_technical_support"
        android:layout_below="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technical_support"
        android:textColor="@color/white"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_follow_public_number"
        android:layout_below="@id/tv_technical_support"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_public_number"
        android:textColor="@color/white"
        android:textSize="18sp"/>
    <TextView
        android:layout_below="@id/tv_follow_public_number"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_msg_to_public_number"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</RelativeLayout>
